--- a/assets/css/creationbydestruction.scss
+++ b/assets/css/creationbydestruction.scss
@@ -86,14 +86,6 @@
 #content-connect {
   min-height: 600px;
 }
-#layers-connect {
-  right: 30%;
-  min-width: 40%;
-  max-width: 50%;
-}
-.layers-connect > a {
-  width: 50%;
-}
 /* SOCIAL MEDIA BUTTON */
 .social_btn-facebook {background: #3b5998;color:#172d5e}
 .social_btn-twitter {background: #00aced;color:#043d52}
